--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       <canvas id="canvas"></canvas>
     </div>
     <div id="page2" class="w-full h-screen flex items-center justify-center   relative bg-black">
-    <h1 class="credit"> Three <span>Js</span></h1>
+    <h1 class="credit">Coming Soon...</span></h1>
+    <!-- <h1 class="credit"> Credit <span>Vipin Pathak</span></h1> -->
   </div>
   <script type="module" src="main.js"></script>
 </body>
